--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.26.1",
+    "framer-motion": "^5.3.1",
     "next": "12.0.3",
     "next-images": "^1.8.2",
     "react": "17.0.2",
