--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "next-images": "^1.8.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.3"
+    "react-lottie": "^1.2.3",
+    "styled-components": "^5.3.3",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
